sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:5: error: not found: value valueCount
  var v=valueCount()-2
        ^