sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var swapped=false
  var j=0
  var v=valueCount()-2
  do{
    swapped=false
    for (i<-0 to v-j){
      if (!isSmaller(i,i+1)){
        swap(i,i+1)
        swapped=true
      }
    }
    for (i<-v-j to 0 by -1){
      if (!isSmaller(i,i+1)){
        swap(i,i+1)
        swapped=true
      } 
    }
    j=j+1
  }while(swapped)
}